--- a/protofolio.html
+++ b/protofolio.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="container nav-container">
             <a href="" class="logo">
-                <h2>Rajnish<span> Kumar</span></h2>
+                <h2><span>Rudresh K J</span></h2>
             </a>
             <ul>
                 <li><a href="#About">About </a></li>
@@ -32,7 +32,7 @@
                 <h1>
                     Hello,
 
-                    <p class="name"> I am <span>Rajnish</span></p>
+                    <p class="name"> I am <span>Rudresh</span></p>
                 </h1>
                 <p>Proficient in HTML,CSS, Javascript and React.js with
                     experience in windows and linux<br> environmenst
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="header-right">
-                <img src="pic22.jpeg" alt="">
+                <img src="PIC22.jpg" alt="">
             </div>
     </header>
 
@@ -64,25 +64,25 @@
             <article class="about-article">
                 <img src="man.png" alt="">
                 <h5>FULL NAME</h5>
-                <p>Rajnish KUmar</p>
+                <p>Rudresh K J</p>
 
             </article>
             <article class="about-article">
                 <img src="email.png" alt="">
                 <h5>EMAIL</h5>
-                <p>sonyrajnish845455@gmail.com </p>
+                <p>rudreshkjkj@gmail.com </p>
 
             </article>
             <article class="about-article">
                 <img src="linkedin.png" alt="">
                 <h5>Linkedin</h5>
-                <p>www.linkedin.com/in/rajnish-kumar-aa9123209</p>
+                <p>www.linkedin.com/in/rudresh-k-j-94958133a</p>
 
             </article>
             <article class="about-article">
                 <img src="telephone-call.png" alt="">
                 <h5>PHONE </h5>
-                <p>+918789512130</p>
+                <p>+917795379519</p>
 
             </article>
         </div>
@@ -213,7 +213,7 @@
         </div>
     </section>
     <footer>
-        &copy;Rajnish Kumar
+        &copy;Rudresh K J
 
     </footer>
     <script src="script.js"></script>
